[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tournament-manager"
version = "1.0.0"
description = "Back-office manager for contact-sport tournaments"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "notebook",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["notebooks"]
pythonpath = ["."]
